syntax = "proto3";

package Battlenet.JSON.Login;

option optimize_for = CODE_SIZE;

enum FormType {
  LOGIN_FORM = 0;
}

message FormInput {
  string inputId = 1;
  string type = 2;
  string label = 3;
  uint32 maxLength = 4;
}

message FormInputs {
  FormType type = 1;
  repeated FormInput inputs = 2;
}

message FormInputValue {
  string inputId = 1;
  string value = 2;
}

message LoginForm {
  string platformId = 1;
  string programId = 2;
  string version = 3;
  repeated FormInputValue inputs = 4;
}

enum AuthenticationState {
  LOGIN = 0;
  LEGAL = 1;
  AUTHENTICATOR = 2;
  DONE = 3;
}

message LoginResult {
  AuthenticationState authenticationState = 1;
  string errorCode = 2;
  string errorMessage = 3;
  string url = 4;
  string loginTicket = 5;
}
